Attempting to fix notebook rendering issue in github

--- a/Segmenting and Clustering Neighborhoods in Toronto.ipynb
+++ b/Segmenting and Clustering Neighborhoods in Toronto.ipynb
@@ -4,8 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://cognitiveclass.ai\"><img src = \"https://ibm.box.com/shared/static/9gegpsmnsoo25ikkbl4qzlvlyjbgxs5x.png\" width = 400> </a>\n",
-    "\n",
     "<h1 align=center><font size = 5>Segmenting and Clustering Neighborhoods in Toronto, Canada</font></h1>"
    ]
   },
@@ -15,7 +13,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "In this notebook we will explore the neighborhoods in Toronto Canada using hte Fourdquare API and the K-means clustering method."
+    "In this notebook we will explore the neighborhoods in Toronto Canada using the Fourdquare API and the K-means clustering method. The goal is to scrape a webpage for data, convert it into a pandas data frame, clean and wrangle the data for use in a K-meansw clustering algorithm, and then analyze the makeup of the neighbourhood clusters in Toronto, Canada. We want to see if there is any noticeable defnining characteristics of how neighbourhoods in Toronto, Canada are layed out."
    ]
   },
   {
